Install extensions and add configs

--- a/setup/ansible/roles/vscode/tasks/main.yml
+++ b/setup/ansible/roles/vscode/tasks/main.yml
@@ -8,3 +8,21 @@
   become: true
   shell: |
     snap install vscode --classic
+
+  name: Install extensions
+  shell: |
+    code --install-extension --force bungcip.better-toml
+    code --install-extension --force DavidAnson.vscode-markdownlint
+    code --install-extension --force dunstontc.dark-plus-syntax
+    code --install-extension --force eriklynd.json-tools
+    code --install-extension --force ms-python.python
+    code --install-extension --force ms-vscode.Go
+    code --install-extension --force PeterJausovec.vscode-docker
+    code --install-extension --force robertohuertasm.vscode-icons
+    code --install-extension --force wayou.vscode-todo-highlight
+  
+  name: Add configurations
+  copy:
+    src: "/tmp/Ubuntu1804_ansible_setup/setup/ansible/roles/vscode/files/settings.json"
+    dest:  "~/.config/Code/User/settings.json"
+    mode: 0555  
