--- a/setup/ansible/roles/vscode/tasks/main.yml
+++ b/setup/ansible/roles/vscode/tasks/main.yml
@@ -20,9 +20,13 @@
     code --install-extension --force PeterJausovec.vscode-docker
     code --install-extension --force robertohuertasm.vscode-icons
     code --install-extension --force wayou.vscode-todo-highlight
-  
+- name: Create Directory
+  become: true
+  file:
+    path: "~/.config/Code/User/"
+    state: directory
+
 - name: Add configurations
   copy:
     src: "/tmp/Ubuntu1804_ansible_setup/setup/ansible/roles/vscode/files/settings.json"
     dest:  "~/.config/Code/User/settings.json"
-    mode: 0555  
