--- a/setup/ansible/roles/vscode/tasks/main.yml
+++ b/setup/ansible/roles/vscode/tasks/main.yml
@@ -11,17 +11,18 @@
 
 - name: Install extensions
   shell: |
-    code --install-extension --force bungcip.better-toml
-    code --install-extension --force DavidAnson.vscode-markdownlint
-    code --install-extension --force dunstontc.dark-plus-syntax
-    code --install-extension --force eriklynd.json-tools
-    code --install-extension --force ms-python.python
-    code --install-extension --force ms-vscode.Go
-    code --install-extension --force PeterJausovec.vscode-docker
-    code --install-extension --force robertohuertasm.vscode-icons
-    code --install-extension --force wayou.vscode-todo-highlight
-    
+    code --install-extension bungcip.better-toml
+    code --install-extension DavidAnson.vscode-markdownlint
+    code --install-extension dunstontc.dark-plus-syntax
+    code --install-extension eriklynd.json-tools
+    code --install-extension ms-python.python
+    code --install-extension ms-vscode.Go
+    code --install-extension PeterJausovec.vscode-docker
+    code --install-extension robertohuertasm.vscode-icons
+    code --install-extension wayou.vscode-todo-highlight
+
 - name: Create Directory
+  become: true
   file:
     path: "~/.config/Code/User/"
     state: directory
