--- a/setup/ansible/roles/misc/tasks/main.yml
+++ b/setup/ansible/roles/misc/tasks/main.yml
@@ -12,6 +12,7 @@
     gsettings set org.gnome.desktop.interface clock-show-seconds true
     gsettings set org.gnome.desktop.interface clock-show-date true
     gsettings set org.gnome.desktop.calendar show-weekdate true
+    gsettings set org.gnome.desktop.interface text-scaling-factor 1.3
   when: ansible_distribution == 'Ubuntu' and ansible_distribution_release == 'bionic'
 
 - name: Set desktop settings
